# EG_Virtual_Lab

./: .gitignore  EG_Lab_Tailwind_Redesign_Masterplan.md  EG_VirtualLab_Redesign_Instructions.md  git-auto-backup-unified.ps1  git-init-setup.ps1  git-setup-token.ps1  index.html
EG_Vlab_legacy/docs/: PART-B-Lines-VLab-Complete.md  solids-spec.md  st_lines.md
EG_Vlab_legacy/experiments/SecSolids/: caseC.js  core.js  index.html  sectioning.js  styles.css
EG_Vlab_legacy/experiments/introduction/: importance.html
EG_Vlab_legacy/experiments/lines/: COMPLETE_VIRTUAL_LAB_SPEC.md  ENTERPRISE-REBUILD-ANALYSIS.md  lines-case1.js  lines-case2A.js  lines-case2B.js  lines-case3A.js  lines-case3B.js  lines-case4.js  lines-case5.js  (+22 more)
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: curves.py  projections.py
backend/app/engine/: config.py  geometry.py  renderer.py  solids.py
backend/app/engine/cases/: case_a.py  case_b.py  case_c.py  case_d.py
backend/app/engine/curves/: __init__.py  cycloid_engine.py  ellipse_engine.py
backend/app/schemas/: curve_schemas.py  projection.py
backend/app/services/: projection_service.py
backend/eg_virtual_lab_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/test_api/: test_projections.py
backend/tests/test_engine/: test_geometry.py
docs/: solids-spec.md
experiments/introduction/: introduction.html
experiments/solids/: caseD.js  core.js  projections-of-solids.html  styles.css
frontend/: README.md  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
(+37 files in other folders)
